# utils

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  cmake_install.cmake
cmake/: MNG.cmake  mng_impl.py
inc/: arg_parser.hpp  bench_timer.hpp  claunder.hpp  cmemory.hpp  concepts.hpp  cspan.hpp  debug.hpp  expected.hpp  file.hpp  file_view.hpp  guid_generator.hpp  loggers.hpp  network.hpp  optional.hpp  precision_timer.hpp  profiler.hpp  progress.hpp  ranges.hpp  stack_trace.hpp  statistics.hpp  terminal_status.hpp  utility_types.hpp  utils_macros.hpp  utils_manip.hpp  utils_process.hpp
inc/common/: comms.hpp  formatters.hpp  loggers.hpp  macros.hpp  math_utils.hpp  proccess.hpp  profiler.hpp  shared_mutex.hpp  std_impl.hpp  timer.hpp  utils.hpp
inc/std/: filesystem.hpp  format.hpp  string_view.hpp  variant.hpp
scripts/: build_and_test  dependencies.cmake
src/: comms.cpp  main.cpp
test/: CMakeLists.txt
test/test_common/: CMakeLists.txt
test/test_common/inc/: test_common.hpp  test_interface.hpp  test_utils_arg_parser.hpp  test_utils_filesystem.hpp  test_utils_process.hpp
test/test_common/src/: test_arg_parser.cpp  test_interface.cpp  test_utils_filesystem.cpp  test_utils_process.cpp
test/tests_cxx11/: CMakeLists.txt
test/tests_cxx14/: CMakeLists.txt
test/tests_cxx17/: CMakeLists.txt
test/tests_cxx20/: CMakeLists.txt
test/tests_cxx23/: CMakeLists.txt
test/tests_cxx23/src/: main.cpp
test/tests_cxx26/: CMakeLists.txt
